# ExampleProject

./: CMakeLists.txt  Doxyfile  main.cxx
SimpleProject/: CMakeLists.txt  Doxyfile
SimpleProject/src/: classA.cpp  classA.h  main.cpp
SimpleProject/test/: test_main.cpp
factorial/: CMakeLists.txt  factorial.cxx
speaker/: CMakeLists.txt  Doxyfile  Speaker.cxx  Speaker.h  main.c  main2.cxx  mainpage.dox
